--- a/aur-repo/cloud-fs-bin/PKGBUILD
+++ b/aur-repo/cloud-fs-bin/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=cloud-fs-bin
 pkgname=clouddrive
-pkgver=0.7.14
+pkgver=0.7.15
 pkgrel=1
 epoch=2
 pkgdesc="CloudDrive - Unlocking the Unlimited Possibilities of Cloud Storage"
@@ -28,8 +28,8 @@ source=("LICENSE.html::https://raw.githubusercontent.com/cloud-fs/cloud-fs.githu
     "${pkgname}-${epoch}-aarch64-${pkgver}.tgz::${url}/releases/download/v${pkgver}/${pkgname}-${epoch}-linux-aarch64-${pkgver}.tgz")
 sha256sums=('c336f41e259916212c7fdd3e21a26a2faf94d725b5daf686bca501978efbf17e'
             '32d37f9ab2f20170c8938a7bf3349eac152f4ee663f2c630be3ca966f50300bc'
-            '795f704c898279963411cc0047dd3e6e933ea5795b3ffb2be5369e8cbb6684b8'
-            'fc5af7e97098bc4e742eb1d66b0a9947aa855d344adffc5e9ed4eaf5fa251091')
+            'c2efdff1d25a97871378ce4f14cde434da2cdf02ad5290650c16037cbfc11a30'
+            '34dedf7c75b2b7d758e6d3559df3968a1c25baf6775cfccb549276ee0bd38790')
 noextract=(
     ${pkgname}-${epoch}-x86_64-${pkgver}.tgz
     ${pkgname}-${epoch}-aarch64-${pkgver}.tgz)
@@ -52,6 +52,7 @@ package() {
 #!/usr/bin/env bash
 
 LOCAL_ROOT_PATH="/media/clouddrive"
+MAX_QSP_115=4.5
 
 cd /opt/clouddrive
 ./clouddrive
