icestorm-nightly: auto updated to 1:20240908_738af82-1

--- a/aur-repo/icestorm-nightly/PKGBUILD.in
+++ b/aur-repo/icestorm-nightly/PKGBUILD.in
@@ -13,6 +13,7 @@ options=("!strip")
 depends=("python" "libftdi-compat")
 optdepends=()
 makedepends=("git" "make" "gcc")
+provides=("icestorm")
 conflicts=("icestorm-git")
 replaces=()
 source=(
