--- a/aur-repo/icestorm-nightly/PKGBUILD
+++ b/aur-repo/icestorm-nightly/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Aki-nyan <aur@catgirl.link>
 
 pkgname=icestorm-nightly
-pkgver=20240907_738af82
+pkgver=20240908_738af82
 pkgrel=1
 epoch=1
 pkgdesc="Lattice iCE40 FPGAs Bitstream Documentation"
@@ -13,6 +13,7 @@ options=("!strip")
 depends=("python" "libftdi-compat")
 optdepends=()
 makedepends=("git" "make" "gcc")
+provides=("icestorm")
 conflicts=("icestorm-git")
 replaces=()
 source=(
