--- a/aur-repo/alist-bin/PKGBUILD
+++ b/aur-repo/alist-bin/PKGBUILD
@@ -3,12 +3,12 @@
 
 pkgname=alist-bin
 _pkgname=${pkgname%-bin}
-pkgver=3.36.0
+pkgver=3.37.0
 pkgrel=1
 pkgdesc="Another file list program that supports multiple storage"
 arch=("aarch64" "x86_64")
 url="https://github.com/alist-org/alist"
-license=('AGPL3')
+license=('AGPL-3.0-only')
 provides=(${_pkgname})
 backup=("etc/alist/config.json")
 optdepends=('aria2: download by aria2.')
@@ -21,8 +21,8 @@ sha256sums=('5712b21aebf669fe9fb5d47dd685809d4d9670b1bb1d5e6fef962b9d11ba9d72'
             'b72f194a7b8855e97eeb76e63e179f38132cc9e6be9daa5b396699c9c11611de'
             '3658370660806f73c3d9bc5f1b6e2a013c9520d34ffc4462df99f7692473613d'
             'c6b62c4a750ab921c2e8f965e4baeee28855c9a969b00eddd346670f2fdf12de')
-sha256sums_aarch64=('4b230796c4c59711527828915ea3ee40c7dd1bf56654ae838610e964b7101225')
-sha256sums_x86_64=('5cdbaf8414413692529b4d3815572bb24faf4b198177798beb1db138de872d08')
+sha256sums_aarch64=('9abced6ed7b0228aed439f0d1f541dffe7ac14de4f704ae084bc165bd0db24b4')
+sha256sums_x86_64=('38102e348556b0fce65e84397b5e187cfd160a1ffeaa5496a8e2ed197502cd2b')
 
 package() {
     install -Dm755 alist ${pkgdir}/usr/bin/alist
