--- a/aur-repo/rustdesk-nightly/lilac.yaml
+++ b/aur-repo/rustdesk-nightly/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='taotieren')
-
+pre_build_script: aur_pre_build(maintainers=['Kingtous', 'dahool'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     aur: rustdesk-nightly
