--- a/aur-repo/serverstatus-git/PKGBUILD
+++ b/aur-repo/serverstatus-git/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=(serverstatus-git
     serverstatus-clients-linux-git
     serverstatus-clients-psutil-git
     serverstatus-server-git)
-pkgver=1.1.5.r1.gb95d194
+pkgver=1.1.5.r5.ge01cc11
 pkgrel=1
 groups=()
 pkgdesc="云探针、多服务器探针、云监控、多服务器云监控"
