--- a/aur-repo/libpldm-git/PKGBUILD
+++ b/aur-repo/libpldm-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=libpldm-git
-pkgver=0.8.0.r80.g11e2e87
+pkgver=0.9.1.r19.g435c932
 pkgrel=1
 epoch=
 pkgdesc="This is a library which deals with the encoding and decoding of PLDM messages."
