--- a/aur-repo/stm32cubeprog/lilac.yaml
+++ b/aur-repo/stm32cubeprog/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers=['taotieren', 'GPereira', 'akumaexs'])
-
+pre_build_script: aur_pre_build(maintainers=['taotieren', 'GPereira', 'akumaexs', 'CloverGit'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     aur: stm32cubeprog
