--- a/aur-repo/qdap-git/PKGBUILD
+++ b/aur-repo/qdap-git/PKGBUILD
@@ -27,7 +27,7 @@ makedepends=(git
     pkgconf)
 optdepends=()
 source=("${pkgname}::git+${url}.git"
-    "git+https://github.com/ma6254/qdap_chips")
+    "git+https://github.com/ma6254/qdap_chips.git")
 sha256sums=('SKIP'
     'SKIP')
 
