--- a/aur-repo/qdap-git/PKGBUILD
+++ b/aur-repo/qdap-git/PKGBUILD
@@ -15,6 +15,8 @@ provides=(${pkgname%-git})
 conflicts=(${pkgname%-git})
 depends=(
     bash
+    rsync
+
     gcc-libs
     glibc
     libusb
@@ -59,8 +61,7 @@ build() {
 package() {
     DESTDIR="${pkgdir}" ninja -C "${srcdir}"/build install
     install -dm0755 "${pkgdir}/usr/share/${pkgname%-git}/chips"
-    cd ${srcdir}/qdap_chips
-    find . -maxdepth 1 -not -name ".*" -type f -exec cp -v {} ${pkgdir}/usr/share/${pkgname%-git}/chips/ \;
+    rsync -av --exclude='.*' ${srcdir}/qdap_chips ${pkgdir}/usr/share/${pkgname%-git}/chips/
     mv ${pkgdir}/usr/bin/QDAP "${pkgdir}/usr/share/${pkgname%-git}/"
     install -Dm755 /dev/stdin "${pkgdir}/usr/bin/${pkgname%-git}" <<EOF
 #!/usr/bin/env bash
