--- a/aur-repo/python-pytest-runner/lilac.yaml
+++ b/aur-repo/python-pytest-runner/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['daizhirui'])
+pre_build_script: aur_pre_build(maintainers=['daizhirui', 'dvzrv'])
 post_build: aur_post_build
 update_on:
   - source: aur
