--- a/aur-repo/python-kinet2pcb/PKGBUILD
+++ b/aur-repo/python-kinet2pcb/PKGBUILD
@@ -13,6 +13,7 @@ groups=()
 provides=(${_name})
 conflicts=(${_name})
 depends=(
+    kicad
     python
     python-future
     python-kinparse
@@ -22,7 +23,7 @@ makedepends=(python-build
     python-wheel
     python-setuptools
     python-pytest-runner)
-options=('!strip')
+options=('!emptydirs' '!strip')
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
 noextract=()
 sha256sums=('7ea2713a25cb2535cf2714fddad47b6a95928cef91684056f4b2779fd10ec193')
