--- a/aur-repo/python-skidl/PKGBUILD
+++ b/aur-repo/python-skidl/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=python-skidl
 _name=${pkgname#python-}
 pkgver=1.2.3
-pkgrel=1
+pkgrel=2
 pkgdesc="A Python package for textually describing electronic circuit schematics."
 arch=(any)
 url="https://pypi.org/project/skidl"
@@ -21,6 +21,7 @@ _py_deps=(
   sexpdata
   pyspice)
 depends=(
+  bash
   python
   "${_py_deps[@]/#/python-}")
 makedepends=(python-build
@@ -43,4 +44,13 @@ build() {
 package() {
   cd "${srcdir}/${_name}-${pkgver}"
   python -m installer --destdir="${pkgdir}" dist/*.whl
+  install -Dm644 /dev/stdin ${pkgdir}/etc/profile.d/${pkgname}.sh <<EOF
+#!/bin/sh
+
+if [ -d /usr/share/kicad/symbols/ ]; then
+  export KICAD_SYMBOL_DIR="/usr/share/kicad/symbols"
+fi
+
+export PATH
+EOF
 }
