--- a/aur-repo/python-skidl/PKGBUILD
+++ b/aur-repo/python-skidl/PKGBUILD
@@ -49,6 +49,7 @@ package() {
 
 if [ -d /usr/share/kicad/symbols/ ]; then
   export KICAD_SYMBOL_DIR="/usr/share/kicad/symbols"
+  export KICAD8_SYMBOL_DIR="/usr/share/kicad/symbols"
 fi
 
 export PATH
