--- a/aur-repo/deeplx-git/PKGBUILD
+++ b/aur-repo/deeplx-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=deeplx-git
-pkgver=0.9.5.r2.g0d73552
+pkgver=0.9.7.r2.g1bef182
 pkgrel=1
 pkgdesc="DeepL Free API (No TOKEN required)"
 arch=(x86_64
