--- a/aur-repo/xrock-git/PKGBUILD
+++ b/aur-repo/xrock-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=xrock-git
-pkgver=1.1.1.r5.g449979b
+pkgver=1.1.1.r7.g8e4fb58
 pkgrel=1
 epoch=
 pkgdesc="The low level tools for rockchip SOC with maskrom and loader mode support."
