--- a/aur-repo/xrock-git/PKGBUILD
+++ b/aur-repo/xrock-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=xrock-git
-pkgver=1.1.1.r8.g950b8d3
-pkgrel=2
+pkgver=1.1.1.r9.gc4d4880
+pkgrel=1
 epoch=
 pkgdesc="The low level tools for rockchip SOC with maskrom and loader mode support."
 arch=(x86_64
