--- a/aur-repo/cloud-fs-bin/lilac.yaml
+++ b/aur-repo/cloud-fs-bin/lilac.yaml
@@ -1,14 +1,13 @@
 maintainers:
   - github: taotieren
-
 build_prefix: extra-x86_64
-
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-
 update_on:
   - source: github
     github: cloud-fs/cloud-fs.github.io
-    use_latest_release: true
+    use_max_tag: true
     prefix: v
+    # use_latest_release: true
+    # prefix: v
