--- a/aur-repo/cloud-fs-bin/lilac.yaml
+++ b/aur-repo/cloud-fs-bin/lilac.yaml
@@ -8,6 +8,6 @@ update_on:
   - source: github
     github: cloud-fs/cloud-fs.github.io
     use_latest_release: true
-    prefix: v
+    # prefix: v
     # use_max_tag: true
     # prefix: v
