--- a/aur-repo/jlink-software-and-documentation/PKGBUILD
+++ b/aur-repo/jlink-software-and-documentation/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: pzl <alsoelp at gmail dot com>
 
 pkgname=jlink-software-and-documentation
-pkgver=7.98i
+pkgver=8.10
 pkgrel=1
 epoch=61
 pkgdesc="Segger JLink software & documentation pack for Linux"
@@ -37,10 +37,10 @@ desktops=(
         "JTAGLoadExe.desktop"
 )
 source+=(${desktops[@]})
-md5sums_x86_64=('80a9457cd4933288cb18772955afae05')
-md5sums_i686=('8a6bf84866e547d4066c87e94e183b34')
-md5sums_aarch64=('c710b5c6284eb50ee1e7bdcf0572e585')
-md5sums_armv7h=('d6b96ea259988f8f630e2020e05237fe')
+md5sums_x86_64=('a0694d2d3562b3caa6a286c2c9379923')
+md5sums_i686=('935a23ee1f540f99db4f3c639ccbe803')
+md5sums_aarch64=('c2b9c94139444d8180a809103737de1e')
+md5sums_armv7h=('f90cfdb871338b992b90204ab0cc1060')
 
 md5sums=("a57d93b791581c1f36e4c672303bb85d"
          "02c4941650a2bd345b03dd958313d4c5"
