--- a/aur-repo/liteloader-qqnt-bin/lilac.yaml
+++ b/aur-repo/liteloader-qqnt-bin/lilac.yaml
@@ -1,13 +1,9 @@
 maintainers:
   - github: taotieren
-
 pre_build_script: aur_pre_build(maintainers=['kobe-koto', 'Kevin_Liu'])
-
 post_build: aur_post_build
-
 repo_depends:
-  - linuxqq
-
+  - linuxqq-nt-bwrap
 update_on:
   - source: aur
     aur: liteloader-qqnt-bin
