--- a/aur-repo/ozone/PKGBUILD
+++ b/aur-repo/ozone/PKGBUILD
@@ -2,11 +2,11 @@
 # Maintainer: pzl <alsoelp at gmail dot com>
 
 pkgname=ozone
-pkgver=3.36
-pkgrel=1
+pkgver=3.38
+pkgrel=0
 epoch=29
 pkgdesc="Segger Ozone JLink debugger for Linux"
-arch=('i686' 'x86_64')
+arch=('x86_64')
 license=('custom')
 groups=('jlink')
 replaces=('jlink-debugger')
@@ -14,10 +14,8 @@ conflicts=('jlink-debugger')
 provides=('jlink-debugger')
 depends=('jlink-software-and-documentation>=5.10n')
 source_x86_64=("Ozone_Linux_V${pkgver/./}_x86_64.tgz::https://www.segger.com/downloads/jlink/Ozone_Linux_V${pkgver/./}_x86_64.tgz")
-source_i686=("Ozone_Linux_V${pkgver/./}_i686.tgz::https://www.segger.com/downloads/jlink/Ozone_Linux_V${pkgver/./}_i386.tgz")
 source=("Ozone.desktop" "Ozone.svg")
-md5sums_x86_64=('0016555ae5b86efab1e03322aa6f88f4')
-md5sums_i686=('576e4def30fe3269c789122a9ab241f8')
+md5sums_x86_64=('f978b734c9e1cd98e74dafa62882f06b')
 md5sums=('d1d2aa1b868487207ad256ebc8235982' 'f7c46fe903305c37f38f846b18318b38')
 
 url="https://www.segger.com/jlink-software.html"
