--- a/aur-repo/yoctools/PKGBUILD
+++ b/aur-repo/yoctools/PKGBUILD
@@ -6,13 +6,25 @@ pkgver=2.0.95
 pkgrel=1
 epoch=
 pkgdesc="(Yun on Chip) 以极简开发为理念，以 CPU 架构、芯片平台、操作系统、云服务和开发套件为基础，助力开发者从芯片到云的全链路高效设计，是面向 IoT 领域的全栈技术平台"
-arch=('any')
+# arch=('any')
+arch=('x86_64')
 url="https://pypi.org/project/yoctools/"
 license=('BSD-2-Clause')
 groups=()
 depends=(
+    sh
     scons
-    'python')
+    'python'
+    #     python-configupdater
+    python-gitdb
+    python-gitpython
+    #     python-httplib2
+    python-smmap
+    python-ruamel-yaml
+    #     python-threadpoolctl
+    python-xlsxwriter
+    #     python-urllib3
+)
 makedepends=(python-build
     python-installer
     python-setuptools
@@ -23,7 +35,7 @@ provides=()
 conflicts=()
 replaces=()
 backup=()
-options=()
+options=(!debug)
 install=
 changelog=
 source=("${pkgbase}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${pkgbase::1}/$pkgbase/$pkgbase-$pkgver.tar.gz")
