--- a/aur-repo/libpldm-git/PKGBUILD
+++ b/aur-repo/libpldm-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=libpldm-git
-pkgver=0.9.1.r70.g98e137d
-pkgrel=2
+pkgver=0.10.0.r0.g5d8e30c
+pkgrel=1
 epoch=
 pkgdesc="This is a library which deals with the encoding and decoding of PLDM messages."
 arch=(aarch64
