--- a/aur-repo/serial-studio/PKGBUILD
+++ b/aur-repo/serial-studio/PKGBUILD
@@ -22,7 +22,8 @@ depends=(gcc-libs
 makedepends=(git
     $_qt-charts
     $_qt-location
-    $_qt-quickcontrols2
+    #     $_qt-quickcontrols2
+    $_qt-quickeffectmaker
     $_qt-svg
     $_qt-tools)
 provides=(${_pkgname} ${pkgname} ${pkgname}-git)
@@ -37,10 +38,10 @@ source=("${pkgname}::git+${url}.git"
     "git+https://github.com/jothepro/doxygen-awesome-css.git"
     "git+https://github.com/alex-spataru/qmqtt.git")
 sha256sums=('SKIP'
-            'SKIP'
-            'SKIP'
-            'SKIP'
-            'SKIP')
+    'SKIP'
+    'SKIP'
+    'SKIP'
+    'SKIP')
 noextract=()
 
 prepare() {
