--- a/aur-repo/mockitt-cn/PKGBUILD
+++ b/aur-repo/mockitt-cn/PKGBUILD
@@ -19,7 +19,7 @@ makedepends=(
     libarchive)
 license=('Commercial')
 url="https://modao.cc/feature/downloads.html"
-source_x86_64=("${pkgname}-${pkgver}.deb::https://cdn.modao.cc/desktop/prod-${pkgver}/linux/Mockitt-linux-x64-${pkgver}.deb")
+source_x86_64=("${pkgname}-${pkgver}.deb::https://cdn-release.modao.cc/desktop/prod-${pkgver}/linux/Mockitt-linux-x64-${pkgver}.deb")
 sha256sums_x86_64=('04dcfb00287ee56d5106b4230f6223b1a523d6d12a0d268799147854da7d1672')
 
 package() {
