--- a/aur-repo/hqdfm-wine/PKGBUILD
+++ b/aur-repo/hqdfm-wine/PKGBUILD
@@ -23,12 +23,12 @@ backup=()
 options=('!strip' '!debug')
 install=${pkgname}.install
 source=(
-    "${pkgname%-wine}-v${pkgver}.zip::${url}/uploads/software/HQDFM%20V${pkgver}.zip"
+    "${pkgname%-wine}-v${pkgver}.zip::${url}/uploads/software/HQDFM%20v${pkgver}.zip"
     "${pkgname}.install"
     "${pkgname%-wine}.png::${url}/static/images/dfm_logo.png")
 sha256sums=('3bd0af47b016147dd715ed72919df262604902f34b9e3c5de85ebe361c5576c2'
-            '18ba316bf686a95eda0ac51276965b6ba2a0c7093ed6c73484b3d226b5cb1085'
-            '2fa20ad946fbf021b14d9493aad8b7af3d8829e71b0ca66316b2ee1065b66b15')
+    '18ba316bf686a95eda0ac51276965b6ba2a0c7093ed6c73484b3d226b5cb1085'
+    '2fa20ad946fbf021b14d9493aad8b7af3d8829e71b0ca66316b2ee1065b66b15')
 # noextract=("${pkgname%-wine}-v${pkgver}.zip"
 #             "${pkgname%-wine}-tiny-v${pkgver}.zip")
 
