--- a/aur-repo/hqdfm-wine/lilac.yaml
+++ b/aur-repo/hqdfm-wine/lilac.yaml
@@ -19,6 +19,6 @@ post_build_script: |
 update_on:
   - source: regex
     url: "https://dfm.elecfans.com/downloads"
-    regex: 'HQDFM V(\d+.\d+).zip'
+    regex: 'HQDFM v(\d+.\d+).zip'
   - source: manual
     manual: 1
