--- a/aur-repo/kicad-pcb-diff/PKGBUILD
+++ b/aur-repo/kicad-pcb-diff/PKGBUILD
@@ -3,8 +3,8 @@
 pkgbase=kicad-pcb-diff
 pkgname=kicad-pcb-diff
 _name=kidff
-pkgver=2.5.4
-pkgrel=3
+pkgver=2.5.5
+pkgrel=0
 epoch=
 pkgdesc="Tool to generate a PDF file showing the changes between two KiCad PCB/SCH files. Also a git plug-in."
 arch=('any')
@@ -29,9 +29,9 @@ backup=()
 options=('!strip')
 install=
 changelog=
-source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/${_name}/${_name}-${pkgver}.tar.gz")
+source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/${_name//-/_}/${_name//-/_}-${pkgver}.tar.gz")
 noextract=()
-sha256sums=('11731c3a98d1e2973f59b9c6e3b8633724cf90af210c0e3aa611a4cdda83c451')
+sha256sums=('SKIP')
 #validpgpkeys=()
 
 build() {
