--- a/aur-repo/freerouting-zh-cn/PKGBUILD
+++ b/aur-repo/freerouting-zh-cn/PKGBUILD
@@ -26,17 +26,17 @@ optdepends=(
 backup=()
 options=('!strip' '!debug')
 #install=${pkgname}.install
-source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
+source=("${pkgname%-zh-cn}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('cf53f471bd32e441fdefc80ffbe5010e2429f886cc0988b8223bfb85e161eefc')
 
 build() {
-    cd "${pkgname}-${pkgver}"
+    cd "${pkgname%-zh-cn}-${pkgver}"
     export PATH="/usr/lib/jvm/java-${_jdkver}-openjdk/bin:$PATH"
     ./gradlew assemble
 }
 
 package() {
-    cd "${pkgname}-${pkgver}"
+    cd "${pkgname%-zh-cn}-${pkgver}"
     install -Dm0644 design/icon/freerouting_icon_256x256_v2.png "${pkgdir}/usr/share/pixmaps/${pkgname}.png"
     install -Dm0644 build/libs/freerouting-executable.jar "${pkgdir}/usr/lib/freerouting/freerouting-executable-zh-cn.jar"
     install -Dm0755 /dev/stdin "${pkgdir}/usr/bin/${pkgname}" <<EOF
