--- a/aur-repo/repo-misc-tools/PKGBUILD
+++ b/aur-repo/repo-misc-tools/PKGBUILD
@@ -31,7 +31,7 @@ prepare() {
 
 package() {
     cd "${srcdir}/${pkgname}/cleanup-repo-tools/"
-    install -Dm0755 cleanup-repo-tool.sh "${pkgdir}/usr/bin/cleanup-repo-tool"
+    install -Dm0755 cleanup-repo-tool.py "${pkgdir}/usr/bin/cleanup-repo-tool"
     install -Dm0644 -t "${pkgdir}/usr/lib/systemd/system" cleanup-repo-tool.service
     install -Dm0644 -t "${pkgdir}/usr/lib/systemd/system" cleanup-repo-tool.timer
     install -dm0755 "${pkgdir}/var/log/cleanup-repo-tool"
