--- a/aur-repo/socketcan-rs-git/PKGBUILD
+++ b/aur-repo/socketcan-rs-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=socketcan-rs-git
-pkgver=3.3.0.r41.ge0d7760
+pkgver=3.3.0.r45.g90ebd73
 pkgrel=1
 pkgdesc="Linux SocketCAN access in Rust"
 arch=(aarch64
