--- a/aur-repo/libjaylink-git/PKGBUILD
+++ b/aur-repo/libjaylink-git/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgname=libjaylink-git
 _pkg="${pkgname%-git}"
-pkgver=0.3.1.r11.gfed1ad3
-pkgrel=3
+pkgver=0.4.0.r0.gfa52ee2
+pkgrel=1
 pkgdesc='Library for accessing SEGGER J-Link and compatible devices'
 arch=('x86_64')
 url='https://gitlab.zapb.de/libjaylink/libjaylink'
