--- a/aur-repo/alist-desktop-bin/lilac.yaml
+++ b/aur-repo/alist-desktop-bin/lilac.yaml
@@ -6,6 +6,8 @@ pre_build_script: |
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
+repo_depends:
+  - alist
 update_on:
   - source: github
     github: AlistGo/desktop-release
