--- a/aur-repo/alist-desktop-bin/lilac.yaml
+++ b/aur-repo/alist-desktop-bin/lilac.yaml
@@ -11,8 +11,7 @@ repo_depends:
 update_on:
   - source: github
     github: AlistGo/desktop-release
-    use_latest_release: true
+    use_max_tag: true
     prefix: v
-
-# use_max_tag: true
+# use_latest_release: true
 # prefix: v
