--- a/aur-repo/freerouting-zh-cn/lilac.yaml
+++ b/aur-repo/freerouting-zh-cn/lilac.yaml
@@ -9,5 +9,8 @@ post_build_script: |
 update_on:
   - source: github
     github: freerouting/freerouting
-    use_max_tag: true
+    use_latest_release: true
     prefix: v
+
+# use_max_tag: true
+# prefix: v
