--- a/aur-repo/freerouting-zh-cn-git/PKGBUILD
+++ b/aur-repo/freerouting-zh-cn-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=freerouting-zh-cn-git
-pkgver=2.0.0.r9.g6f03fac
+pkgver=2.0.0.r11.g8211434
 pkgrel=1
 _jrever=21
 _jdkver=21
