--- a/aur-repo/embedded-studio/lilac.yaml
+++ b/aur-repo/embedded-studio/lilac.yaml
@@ -1,21 +1,9 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='kumen')
-
+pre_build_script: aur_pre_build(maintainers=['kumen'])
 post_build: aur_post_build
-
 repo_depends:
   - jlink-software-and-documentation
-  - glibc
-  - gcc-libs
-  - zlib
-  - freetype2
-  - fontconfig
-  - libx11
-  - libxext
-  - libxrender
-
 update_on:
   - source: aur
     aur: embedded-studio
